--- a/css/styles.css
+++ b/css/styles.css
@@ -44,10 +44,12 @@ a{
 .logo-busqueda{
     width: 25px;
     height: 25px;
+    cursor: pointer;
 }
 .logo-compra{
     width: 30px;
     height: 30px;
+    cursor: pointer;
 }
 main{
     display: flex;
@@ -56,10 +58,11 @@ main{
     margin-top: 50px;
 }
 .main-content{
-    max-width: 500px;
+    max-width: 700px;
     color: white;
     margin-top: 50px;
     flex-grow: 1;
+    border-radius: 24px;
 }
 h1{
     margin-bottom: 20px;
@@ -67,35 +70,55 @@ h1{
 h2{
     margin-bottom: 40px;
 }
+.opiniones{
+    color: beige;
+}
+.opiniones:hover {
+    text-decoration: underline; /* subrayado cuando pasas el mouse */
+}
 p{
     margin-bottom: 40px;
     color: gray;
 }
 .airpods-pro{
-    width: 600px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
     flex-grow: 1;
 }
 .button-group{
     display: flex;
     gap: 30px;
+    margin: 30px;
     
 }
 .learn-button{
+    width: 120px;
     border-radius: 0;
     padding: 10px 20px;
     border: 1px solid #fff;
     background-color: transparent;
     color: white;
+    cursor: pointer;
 }
 .buy-button{
     border-radius: 0;
+    width: 120px;
     padding: 10px 20px;
+    cursor: pointer;
 }
 
 /*Galería de imágenes del producto:*/
 .galeria {
+    height: 600px;
+    padding: 10px;
     margin: 80px 100px;
+    border-radius: 16px;
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+
 }
 .galeria h2 {
     color: white;
@@ -110,7 +133,7 @@ p{
 }
 
 .galeria-imagenes img {
-    width: calc(33.333% - 20px);
+    width: 100px;
     height: auto;
     object-fit: cover;
 }
@@ -262,10 +285,9 @@ p{
     grid-column: span 1;
     grid-row: span 1;
 }
-.main-content {
+.main-content2 {
     display: flex;
     flex-direction: column;
-    background-color: #fff;
     color: #222;
     padding: 24px;
     height: 450px;
